primeiro modelo satisfatório a caminho

--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Fael Caporali</title>
 </head>
+
 <body>
-    
+  <header id="cabecalho">
+    <h1 id="nome">Rafael Honório Caporali de Freitas</h1>
+
+    <div id="myMenu" class="hidden-box">
+      <div id="sand" class="todo-menu">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <nav id="navbar" class="hidden">
+        <ul>
+          <li>Home</li>
+          <li>Institucional</li>
+          <li>Shopping Model</li>
+          <li>Veleje livre</li>
+          <li>Contato</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section id="caixa-conteudo">
+      <div id="descricao">
+        <div id="profile-pic-box">
+          <a href="https://www.linkedin.com/in/rafael-caporali-293045191/" target="_blank">
+            <img id="perfil"
+              src="https://media-exp1.licdn.com/dms/image/C5603AQFVstFCeQEUEw/profile-displayphoto-shrink_200_200/0/1641246407192?e=1651104000&v=beta&t=KWOdu01fUaq9MZrZoBSIH-pUfV1tNOoGXo0GtKi9YLU"
+              width="150px" alt="FaelCapoarli's linkedin profile picture" />
+          </a>
+        </div>
+        <div id="page-greetings">
+          <section id="explain">
+            <ul>
+              <li>
+                <h2>Bem vind@!</h2>
+                <p>
+                  Olá! Que feliz que você chegou ao meu portfólio! Aqui, você
+                  encontrará meus trabalhos realizados como um DEV-fullStack
+                  durante o curso da Trybe.
+                </p>
+              </li>
+              <li>
+                <h2>Como funciona?</h2>
+                <p> A página busca ser imersiva e interativa. Para conseguir apresentar um portfóliodesta forma, a
+                  página é separado em 3 áreas. </p>
+                <p> Cada área contém um tipo de informação e abordagem específica e você poderá me conhecerá um pouco
+                  mais experienciando meus trabalhos de forma dinâmica!. </p>
+              </li>
+              <li>
+                <h2>Página institucional</h2>
+                <p>
+                  Nesta área você encontrará uma abordagem minimalista, informações pontuais e abordagem clássica sobre
+                  meu currículo.
+                </p>
+              </li>
+              <li>
+                <h2>E-shop</h2>
+                <p>
+                  Aqui, você poderá ver minhas capacidades como DEV e projetos que desenvolvi. Uma área voltada a
+                  tecnologias, funcionalidades e habilidades técnicas.
+                </p>
+              </li>
+              <li>
+                <h2>Velejando por aí</h2>
+                <p>
+                  Em uma abordagem mais moderna e interativa você navegará pelas águas em que já naveguei, vendo um
+                  pouco mais de criatividade implementada em páginas, valores que estimo como humano e minhas
+                  habilidades sociocomportamentais desenvolvidas. Vem me conhecer!
+                </p>
+              </li>
+            </ul>
+            <hr>
+            <p> Chega de Readme, escolha por quais águas deseja navegar:
+        </div>
+      </div>
+      <div id="selecoes">
+        <a>Minha Página Institucional</a>
+        <a>Fael's e-Market</a>
+        <a>Velejando por aí</a>
+      </div>
+    </section>
+  </main>
+  <footer id="roda-pe"></footer>
+  <script text="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
