--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </nav>
     </div>
   </header>
-  <main>
-    <section id="caixa-conteudo">
+  <main id="caixa-conteudo">
       <div id="descricao">
         <div id="profile-pic-box">
           <a href="https://www.linkedin.com/in/rafael-caporali-293045191/" target="_blank">
+            <img src="./manutenção/v1/LinkedinLogo.png" alt="linkedin logo" id="linkedin-logo">
             <img id="perfil"
               src="https://media-exp1.licdn.com/dms/image/C5603AQFVstFCeQEUEw/profile-displayphoto-shrink_200_200/0/1641246407192?e=1651104000&v=beta&t=KWOdu01fUaq9MZrZoBSIH-pUfV1tNOoGXo0GtKi9YLU"
               width="150px" alt="FaelCapoarli's linkedin profile picture" />
@@ -60,14 +60,14 @@
                   mais experienciando meus trabalhos de forma dinâmica!. </p>
               </li>
               <li>
-                <h2>Página institucional</h2>
+                <h2>Institucional</h2>
                 <p>
                   Nesta área você encontrará uma abordagem minimalista, informações pontuais e abordagem clássica sobre
                   meu currículo.
                 </p>
               </li>
               <li>
-                <h2>E-shop</h2>
+                <h2>Fael's E-market</h2>
                 <p>
                   Aqui, você poderá ver minhas capacidades como DEV e projetos que desenvolvi. Uma área voltada a
                   tecnologias, funcionalidades e habilidades técnicas.
@@ -82,8 +82,7 @@
                 </p>
               </li>
             </ul>
-            <hr>
-            <p> Chega de Readme, escolha por quais águas deseja navegar:
+            <h3> Chega de Readme, escolha por quais águas deseja navegar: </h3>
         </div>
       </div>
       <div id="selecoes">
@@ -91,9 +90,11 @@
         <a>Fael's e-Market</a>
         <a>Velejando por aí</a>
       </div>
-    </section>
   </main>
-  <footer id="roda-pe"></footer>
+  <hr>
+  <footer id="roda-pe">
+    <section>contatos</section>
+  </footer>
   <script text="text/javascript" src="./script.js"></script>
 </body>
 
