--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <title>Fael Caporali</title>
 </head>
@@ -32,66 +36,75 @@
     </div>
   </header>
   <main id="caixa-conteudo">
-      <div id="descricao">
-        <div id="profile-pic-box">
-          <a href="https://www.linkedin.com/in/rafael-caporali-293045191/" target="_blank">
-            <img src="./manutenção/v1/LinkedinLogo.png" alt="linkedin logo" id="linkedin-logo">
-            <img id="perfil"
-              src="https://media-exp1.licdn.com/dms/image/C5603AQFVstFCeQEUEw/profile-displayphoto-shrink_200_200/0/1641246407192?e=1651104000&v=beta&t=KWOdu01fUaq9MZrZoBSIH-pUfV1tNOoGXo0GtKi9YLU"
-              width="150px" alt="FaelCapoarli's linkedin profile picture" />
-          </a>
+    <section id="descricao">
+      <div id="hello-world">
+        <div id="first-call">
+          <h1>PORTFÓLIO</h1>
+          <p>FULL-STACK DEV</p>
         </div>
-        <div id="page-greetings">
-          <section id="explain">
-            <ul>
-              <li>
-                <h2>Bem vind@!</h2>
-                <p>
-                  Olá! Que feliz que você chegou ao meu portfólio! Aqui, você
-                  encontrará meus trabalhos realizados como um DEV-fullStack
-                  durante o curso da Trybe.
-                </p>
-              </li>
-              <li>
-                <h2>Como funciona?</h2>
-                <p> A página busca ser imersiva e interativa. Para conseguir apresentar um portfóliodesta forma, a
-                  página é separado em 3 áreas. </p>
-                <p> Cada área contém um tipo de informação e abordagem específica e você poderá me conhecerá um pouco
-                  mais experienciando meus trabalhos de forma dinâmica!. </p>
-              </li>
-              <li>
-                <h2>Institucional</h2>
-                <p>
-                  Nesta área você encontrará uma abordagem minimalista, informações pontuais e abordagem clássica sobre
-                  meu currículo.
-                </p>
-              </li>
-              <li>
-                <h2>Fael's E-market</h2>
-                <p>
-                  Aqui, você poderá ver minhas capacidades como DEV e projetos que desenvolvi. Uma área voltada a
-                  tecnologias, funcionalidades e habilidades técnicas.
-                </p>
-              </li>
-              <li>
-                <h2>Velejando por aí</h2>
-                <p>
-                  Em uma abordagem mais moderna e interativa você navegará pelas águas em que já naveguei, vendo um
-                  pouco mais de criatividade implementada em páginas, valores que estimo como humano e minhas
-                  habilidades sociocomportamentais desenvolvidas. Vem me conhecer!
-                </p>
-              </li>
-            </ul>
-            <h3> Chega de Readme, escolha por quais águas deseja navegar: </h3>
-        </div>
+        <img id="perfil"
+          src="https://media-exp1.licdn.com/dms/image/C5603AQFVstFCeQEUEw/profile-displayphoto-shrink_200_200/0/1641246407192?e=1651104000&v=beta&t=KWOdu01fUaq9MZrZoBSIH-pUfV1tNOoGXo0GtKi9YLU"
+          width="150px" alt="FaelCapoarli's linkedin profile picture" />
+        <nav id="shortcut-logos">
+          <a href="https://github.com/FaelCaporali" target="_blank"><img src="./manutenção/v1/githublogo.png"
+              alt="github logo" id="github-logo"></a>
+          <a href="https://www.linkedin.com/in/rafael-caporali-293045191/" target="_blank"></a><img
+            src="./manutenção/v1/LinkedinLogo.png" alt="linkedin logo" id="linkedin-logo"> </a>
+        </nav>
+        <a href="#chaser">Saiba mais</a>
+        </nav>
       </div>
-      <div id="selecoes">
-        <a>Minha Página Institucional</a>
-        <a>Fael's e-Market</a>
-        <a>Velejando por aí</a>
+      <div id="chaser"></div>
+      <div id="page-greetings">
+        <section id="explain">
+          <ul>
+            <li>
+              <h2>Bem vind@!</h2>
+              <p>
+                Olá! Que feliz que você chegou ao meu portfólio! Aqui, você
+                encontrará meus trabalhos realizados como um DEV-fullStack
+                durante o curso da Trybe.
+              </p>
+            </li>
+            <li>
+              <h2>Como funciona?</h2>
+              <p> A página busca ser imersiva e interativa. Para conseguir apresentar um portfóliodesta forma, a
+                página é separado em 3 áreas. </p>
+              <p> Cada área contém um tipo de informação e abordagem específica e você poderá me conhecerá um pouco
+                mais experienciando meus trabalhos de forma dinâmica!. </p>
+            </li>
+            <li>
+              <h2>Institucional</h2>
+              <p>
+                Nesta área você encontrará uma abordagem minimalista, informações pontuais e abordagem clássica sobre
+                meu currículo.
+              </p>
+            </li>
+            <li>
+              <h2>Fael's E-market</h2>
+              <p>
+                Aqui, você poderá ver minhas capacidades como DEV e projetos que desenvolvi. Uma área voltada a
+                tecnologias, funcionalidades e habilidades técnicas.
+              </p>
+            </li>
+            <li>
+              <h2>Velejando por aí</h2>
+              <p>
+                Em uma abordagem mais moderna e interativa você navegará pelas águas em que já naveguei, vendo um
+                pouco mais de criatividade implementada em páginas, valores que estimo como humano e minhas
+                habilidades sociocomportamentais desenvolvidas. Vem me conhecer!
+              </p>
+            </li>
+          </ul>
+          <h3> Chega de Readme, escolha por quais águas deseja navegar: </h3>
       </div>
+    </section>
+    <div id="selecoes">
+      <a>Minha Página Institucional</a>
+      <a>Fael's e-Market</a>
+      <a>Velejando por aí</a>
+    </div>
   </main>
-  <hr>
   <footer id="roda-pe">
     <section>contatos</section>
   </footer>
