ux menu - não precisa clicar só no texto

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       </div>
       <nav id="navbar" class="hidden" title="Áreas da página">
         <ul>
-          <li><a href="#home-chaser">HOME</a></li>
-          <li>INSTITUCIONAL</li>
-          <li>SHOPPING MODEL</li>
-          <li>NAVEGAR POR AÍ</li>
-          <li>CONTATO</li>
+          <a href="#home-chaser"><li>HOME</li></a>
+          <a><li>???</li></a>
+          <a><li>???</li></a>
+          <a><li>???</li></a>
+          <a href='#final-chaser'><li>CONTATO</li></a>
         </ul>
       </nav>
     </div>
@@ -116,11 +116,17 @@
         </li>
       </ul>
       <section id="selecoes" class="master-box">
-        <span> Chega de Readme, escolha por quais águas deseja navegar: </span>
+        <div id="guia">
+        <p> Chega de Readme, escolha por quais águas deseja navegar: </p>
         <a>Minha Página Institucional</a>
         <a>Fael's e-Market</a>
         <a>Velejando por aí</a>
         <!--<a href="#home-chaser">HOME <i class="fa-solid fa-angle-up"></i></a>-->
+      </div>
+      <div id="contatos-maiores">
+        <p>Ou entre logo em contato!</p>
+        <p>No rodapé aqui ó <i class="fa-solid fa-arrow-turn-down"></i> , tem todos os links para entrar em contato, ou pode só me mandar uma mensagem anônima pelo feedback!</p> 
+      </div>
       </section>
     </section>
   </main>
