--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <div id="phone-chaser"></div>
     <div id="home-chaser"></div>
     <div id="greetings-chaser"></div>
     <div id="port-chaser"></div>
