--- a/index.html
+++ b/index.html
@@ -193,48 +193,55 @@
         </ul>
         <section id="selecoes" class="master-box">
           <div id="guia">
-            <p>Chega de Readme, você já entendeu que eu sou mais um DEV! <i class="fa-solid fa-book-open-reader"></i><br>
-              Você pode agora navegar nas áreas que estão prontas aqui:</p>
+            <p>Chega de Readme, você já entendeu que eu sou mais um DEV! <br><i class="fa-solid fa-book-open-reader"></i><br>
+              Você pode agora navegar nas áreas que estão prontas aqui:<br>
+              <i class="fa-solid fa-sailboat"></i></i></p>
             <div id="external">
               <a class="btt" href="#area-one-chaser">Página Institucional</a>
-              <a class="btt">Fael's e-Market</a>
-              <a class="btt">Velejando por aí</a>
+              <a class="btt">Tech Área</a>
+              <a class="btt">Navendo Por Aí</a>
               <!--<a href="#home-chaser">HOME <i class="fa-solid fa-angle-up"></i></a>-->
             </div>
           </div>
           <div id="contatos-maiores">
-            <p>Ou atalha o contato!</p>
-            <p>
-              No rodapé aqui ó <i class="fa-solid fa-arrow-turn-down"></i> , tem
-              todos os links, ou pode só me mandar uma
-              mensagem anônima pelo feedback!
-            </p>
+            <p>Ou se preferir, pode entrar contato!<br>
+            <i class="fa-solid fa-square-phone-flip"></i> <i class="fa-solid fa-envelope-circle-check"></i>
+            </p>  
+            <p>rafaelhon@gmail.com</p>
+              <p>(31) 9.9196-2016</p>
+            </ul> 
           </div>
         </section>
       </section>
     </main>
     <footer>
       <section id="contatos">
+
         <div id="barra-linkendin" class="contact hidden-cont linkedin">
-          <i class="fa-brands fa-linkedin"></i>
+          <a
+              href="https://www.linkedin.com/in/rafael-caporali-293045191/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i></a>
           <i class="fa-solid"></i>
           <span class="hidden footer-spans">Linkedin</span>
         </div>
         <div id="barra-gmail" class="contact hidden-cont gmail">
-          <img
+          <a href="mailto:rafaelhon@gmail.com" subject="Sobre seu portfólio..." target="_blank"><img
             src="./imagens/logos/kisspng-computer-icons-gmail-scalable-vector-graphics-emai-gmail-size-icon-5ab1a5580ffdb7.2247625415215916400655.png"
             id="gmail-ico"
-          />
+          /></a>
           <i class="fa-solid"></i>
-          <span class="hidden footer-spans">E-mail</span>
+          <span class="hidden footer-spans">Email</span>
         </div>
         <div id="barra-whatsapp" class="contact hidden-cont whatsapp">
-          <i class="fa-brands fa-whatsapp"></i>
+          <a href="https://wa.me/5531991962016" target="_blank"
+              ><i class="fa-brands fa-whatsapp"></i></a>
           <i class="fa-solid"></i>
           <span class="hidden footer-spans">WhatsApp</span>
         </div>
         <div id="barra-github" class="contact hidden-cont github">
-          <i class="fa-brands fa-github"></i>
+          <a href="https://github.com/FaelCaporali" target="_blank"
+              ><i class="fa-brands fa-github"></i></a>
           <i class="fa-solid"></i>
           <span class="hidden footer-spans">GitHub</span>
         </div>
