primeira revisão completa

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>
               Olá! Que feliz que você chegou ao meu portfólio! A idéia aqui é
               construir um portfólio acadêmico e dinâmico, onde você possa me
-              conhecer melhor a acompanhar meus trabalhos durante a formação na
+              conhecer melhor e acompanhar meus trabalhos durante a formação na
               Trybe.<br />
               É um portfólio vivo e não convencional, portanto não se assuste se
               encontrar funcionalidades ou design quebrados, a página estará
@@ -135,7 +135,7 @@
               uma forma tradicional, é aqui que você deve procurar!
             </p>
             <p>
-              Meu Currículo, um pouco do que com que já trabelhei, por onde
+              Meu Currículo, um pouco dos trabalhos e projetos que fiz, por onde
               andei estudando e etc..<br />
               Te encontro lá quando estiver pronta!
               <i class="non-btt fa-solid fa-person-through-window"></i>
@@ -193,19 +193,19 @@
         </ul>
         <section id="selecoes" class="master-box">
           <div id="guia">
-            <p>Chega de Readme, você já entendeu que eu sou mais um DEV! <br><i class="fa-solid fa-book-open-reader"></i><br>
+            <p>Chega de Readme, você já entendeu que eu sou mais um DEV! <br><i class="non-btt fa-solid fa-book-open-reader"></i><br>
               Você pode agora navegar nas áreas que estão prontas aqui:<br>
-              <i class="fa-solid fa-sailboat"></i></i></p>
+              <i class="non-btt fa-solid fa-sailboat"></i></i></p>
             <div id="external">
               <a class="btt" href="#area-one-chaser">Página Institucional</a>
-              <a class="btt">Tech Área</a>
-              <a class="btt">Navendo Por Aí</a>
+              <a class="btt" href="#area-two-chaser">Tech Área</a>
+              <a class="btt" href="#area-three-chaser">Navegando Por Aí</a>
               <!--<a href="#home-chaser">HOME <i class="fa-solid fa-angle-up"></i></a>-->
             </div>
           </div>
           <div id="contatos-maiores">
             <p>Ou se preferir, pode entrar contato!<br>
-            <i class="fa-solid fa-square-phone-flip"></i> <i class="fa-solid fa-envelope-circle-check"></i>
+            <i class="non-btt fa-solid fa-square-phone-flip"></i> <i class="non-btt fa-solid fa-envelope-circle-check"></i>
             </p>  
             <p>rafaelhon@gmail.com</p>
               <p>(31) 9.9196-2016</p>
