faltam ajustes finais

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             <a href="#home-chaser" class="btt">
               <li>HOME</li>
             </a>
-            <a class="btt">
-              <li>???</li>
+            <a class="btt" href="#area-one-chaser">
+              <li>INTITUCIONAL</li>
             </a>
-            <a class="btt">
-              <li>???</li>
+            <a class="btt" href="#area-two-chaser">
+              <li>TECH AREA</li>
             </a>
-            <a class="btt">
-              <li>???</li>
+            <a class="btt" href="#area-three-chaser">
+              <li>NAVEGANDO</li>
             </a>
             <a href="#final-chaser" class="btt">
               <li>CONTATO</li>
@@ -251,7 +251,7 @@
         <h6>Deixe um feedback! <i class="fa-solid fa-angle-up"></i></h6>
         <div id="barra-modal" class="hidden">
           <form>
-            <textarea rows="17" cols="22"></textarea>
+            <textarea placeholder="Infelizmente, essa ainda é uma funcionalidade que logo mais estará disponível. Se você sentiu vontade de mandar um feedback, por favor, envie! Só que pelo email alí" rows="17" cols="22"></textarea>
             <button></button>
           </form>
         </div>
