resolvido funcionalidade prev e next do sticky menu

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
   </header>
   <div id="sticky-home">
-    <a id='next'><i class="fa-solid fa-angle-down"></i></a>
-    <a id="prev"><i class="fa-solid fa-angle-up"></i></a>
+    <i id='next' class="fa-solid fa-angle-down"></i>
+    <i id="prev" class="fa-solid fa-angle-up"></i>
     <a href="#home-chaser"><i class="fa-solid fa-angles-up"></i></a>
     <a href="#final-chaser"><i class="fa-solid fa-phone-flip"></i></a>
   </div>
