--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
     <div id="myMenu" class="hidden-box">
       <div class="sanduiche">
-        <div class="bar1"></div>
+        <div class="bar1">
+          <div class="bar1-1"></div>
+          <div class="bar1-2"></div>
+        </div>
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
