limpando feedback textarea

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div id="home-img">
         <a id="prof-pic"> <img
-            src="https://media-exp1.licdn.com/dms/image/C5603AQFVstFCeQEUEw/profile-displayphoto-shrink_800_800/0/1641246407192?e=1657152000&v=beta&t=YKSKpiM6tJpkks37Z93VIFey1HvyAOcD4Ziw0WLTyHQ"
+            src="./imagens/perfil linked in.jpeg"
             alt="FaelCapoarli's linkedin profile picture" /> </a>
         <div id="home-logos"> <a href="https://github.com/FaelCaporali" target="_blank"><img
               src="./imagens/logos/github-seeklogo.com.svg" alt="github logo" id="github-logo" /></a>
@@ -232,13 +232,10 @@
     </div>
     <hr>
     <div id="feedbackid" class="feedback">
+      <a href="mailto:rafaelhon@gmail.com">
       <h4>Deixe um feedback! <i class="fa-solid fa-angle-up"></i></h4>
-      <form class="hidden">
-        <textarea
-          placeholder="Infelizmente, essa ainda é uma funcionalidade que logo mais estará disponível. Se você sentiu vontade de mandar um feedback, por favor, envie! Só que pelo email alí"
-          rows="17" cols="22"></textarea>
-        <button></button>
-      </form>
+      </a>
+
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/4570fe17fe.js" crossorigin="anonymous"></script>
